--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "eslint": "^4.10.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.10.0",
     "prettier": "^1.7.4"
   }
 }
