switch to @cloudwalker/prettier-config

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^4.10.0"
   },
   "devDependencies": {
+    "@cloudwalker/prettier-config": "^0.1.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "eslint": "^4.10.0",
