--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cloudwalker/eslint-config",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Default ESLint configuration",
   "publishConfig": {
     "access": "public"
@@ -11,7 +11,9 @@
     "url": "https://github.com/cloud-walker/eslint-config/issues"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "source/baseConfig.js",
+    "source/reactConfig.js"
   ],
   "peerDependencies": {
     "babel-eslint": "^8.0.1",
