--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "files": [
     "index.js",
-    "react.js",
+    "react.js"
   ],
   "peerDependencies": {
     "babel-eslint": "^8.0.1",
